    launchpadlib.errors.HTTPError, but give a proper error message and point
    out that this script needs "change anything" privileges. (LP: #338201)
  * apport_python_hook.py: Fix crash for already existing reports, and make
    behaviour equivalent to bin/apport: Silently exit for existing unseen
    crash report, and overwrite existing seen crash report. Add test cases.
    (LP: #323714)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 10 Mar 2009 13:02:43 +0100

apport (0.144) jaunty; urgency=low

  * apport/crashdb_impl/launchpad.py, mark_retrace_failed(): If report is
    invalid, remove CoreDump.gz and other attachments.
  * bin/apport-retrace: If we didn't find the ExecutablePath on the system
    because the package is out of date, don't crash, but close the bug as
    invalid.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 10 Mar 2009 10:45:56 +0100

apport (0.143) jaunty; urgency=low

  * debian/apport.README.Debian: Document how to temporarily and permanently
    enable crash interception.
  * backends/packaging-apt-dpkg.py, is_distro_package(): Do not consider a
    package a native distro one if installed version is "None". This happens
    with some PPA packages. (LP: #252734)
  * apport/report.py, anonymize(): Move user name anonymization into the
    "non-root" case as well; fixes uninitialized variable. (LP: #338847)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 09 Mar 2009 12:16:49 +0100

apport (0.142) jaunty; urgency=low

  * apport/report.py: Do not include lsb_release's stderr in the
    DistroRelease: output.
  * apport/hookutils.py: Fix attach_printing():
    - Correct spelling or "error_log".
    - Do not call fgrep with no file names (if /etc/cups/ppd/ is empty), since
      that hangs forever.
  * apport/report.py, _gen_stacktrace_top(): Fix parsing of stacktraces
    with some addresses missing. Add test cases. (LP: #269133)
  * apport/ui.py, run_report_bug(): Show details of collected information and